--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ scala:
    - 2.11.6
 script:
   - sbt ++$TRAVIS_SCALA_VERSION coverage test
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.ivy2
 after_success:
   - pip install --user codecov && codecov
